ADJUSTMENT ON NAV AND ALSO BACKGROUND COLOR

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body{
 
-	background: url(images/passion.jpg);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
+background-color: orange;
    
 }
 
+.navbar-header{
+
+	background-color: white;
+	width: 100%;
+
+}
 
 
 .icon-bar{
@@ -16,19 +20,20 @@ body{
 #logo a{
 
 	text-decoration: none;
-	color: white;
+	color:black;
 	font-weight: bolder;
 	font-size: 50px;
+	padding-left: 50px;
 }
+
 
 
 #menu li a{
 	margin-top: 20px;
    font-size: 20px;
-   color: white;
+   color: black;
   display: block;
   height: 50px;
-
 }
 
 
@@ -209,4 +214,3 @@ font-family: 'Gochi Hand', cursive;
 	font-size: 20px;
 	padding-top: 60px;
 }
-
